--- a/src/app/ui/components/cookie/cookie-consent/cookie-consent.component.scss
+++ b/src/app/ui/components/cookie/cookie-consent/cookie-consent.component.scss
@@ -188,7 +188,7 @@
   }
   .cookie-banner {
     position: fixed;
-    bottom: 0;
+    bottom: 55px;
     left: 0;
     right: 0;
     background: rgba(0, 0, 0, 0.9);
