--- a/src/app/ui/components/footer/footer.component.html
+++ b/src/app/ui/components/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="row g-4">
       <!-- Company Info -->
       <div class="col-lg-4 col-md-6">
-        <img src="assets/homecard/TUMdex.png" alt="TUMdex Logo" class="mb-3" style="max-height: 50px;">
+        <img src={{companyInfo.Logo}} alt="TUMdex Logo" class="mb-3" style="max-height: 50px; cursor: pointer;" routerLink='/home'>
         <p>TUMdex adds value to its customers by providing reliable and professional trading solutions. Quality and
           customer satisfaction are our priorities.</p>
         <div class="contact-info">
