--- a/src/app/ui/components/navbar/navbar.component.html
+++ b/src/app/ui/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
 
           <!-- Brands Button (Mobile) -->
           <div class="brands d-lg-none mobile-brands">
-            <button class="btn" routerLink="/brands-page">Brands</button>
+            <button class="btn" routerLink="/brand">Brands</button>
           </div>
 
           <!-- Search Bar -->
