--- a/src/app/ui/components/product/product-grid/product-grid.component.scss
+++ b/src/app/ui/components/product/product-grid/product-grid.component.scss
@@ -25,7 +25,7 @@ $link-color: #0000ee;
     margin: auto;
     max-width: 1200px;
     border-top: 1px solid $border-color;
-    padding: 20px 0 0 0;
+    padding: 20px 0 0 20px;
   }
 
   .container {
