--- a/src/app/ui/components/unauthorized/unauthorized.component.html
+++ b/src/app/ui/components/unauthorized/unauthorized.component.html
@@ -1,6 +1,6 @@
 <div class="unauthorized-container">
   <div class="content-wrapper">
-    <img src="/assets/homecard/TUMdex.png" alt="TUMdex Logo" class="logo">
+    <img src="/assets/icons/TUMdex.png" alt="TUMdex Logo" class="logo">
     <h1>403</h1>
     <h2>Unauthorized Access</h2>
     <div class="icon-container">
