--- a/src/app/ui/components/login/login-popover/login-popover.component.scss
+++ b/src/app/ui/components/login/login-popover/login-popover.component.scss
@@ -33,10 +33,7 @@ $link-color: #0000ee;
   
   .login-popover, .register-popover {
     font-family: $font-family-base;
-  
-  * {
-    font-family: inherit;
-  }
+    
     position: fixed;
     top: 80px;
     right: auto;
@@ -353,6 +350,78 @@ $link-color: #0000ee;
         a {
           color: lighten(#e53935, 10%);
         }
+      }
+    }
+
+    .alert {
+      padding: 0.75rem 1rem;
+      margin-bottom: 1rem;
+      border: 1px solid transparent;
+      border-radius: 0.25rem;
+      
+      p {
+        margin-bottom: 0.5rem;
+        
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+    
+    .alert-danger {
+      color: #721c24;
+      background-color: #f8d7da;
+      border-color: #f5c6cb;
+      
+      .alert-link {
+        color: #5a171c;
+        text-decoration: underline;
+        cursor: pointer;
+        
+        &:hover {
+          color: #491319;
+        }
+      }
+    }
+    
+    .alert-warning {
+      color: #856404;
+      background-color: #fff3cd;
+      border-color: #ffeeba;
+    }
+    
+    /* Disabled form elements styling */
+    input:disabled {
+      background-color: #f2f2f2;
+      cursor: not-allowed;
+    }
+    
+    .btn-login:disabled {
+      opacity: 0.65;
+      cursor: not-allowed;
+    }
+    
+    /* Dark theme adjustments */
+    .dark-theme {
+      .alert-danger {
+        background-color: rgba(220, 53, 69, 0.2);
+        color: #f8d7da;
+        border-color: rgba(220, 53, 69, 0.5);
+        
+        .alert-link {
+          color: #fff;
+        }
+      }
+      
+      .alert-warning {
+        background-color: rgba(255, 193, 7, 0.2);
+        color: #fff3cd;
+        border-color: rgba(255, 193, 7, 0.5);
+      }
+      
+      input:disabled {
+        background-color: #2c2c2c;
+        color: #aaa;
       }
     }
   }
