--- a/src/app/ui/components/navbar/navbar.component.scss
+++ b/src/app/ui/components/navbar/navbar.component.scss
@@ -1,4 +1,4 @@
-$font-family-base: 'Source Sans Pro', sans-serif;
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css');
 // Variables
 $home-primary-color: #333333;
 $home-secondary-color: #f0f0f0;
@@ -31,11 +31,6 @@ $breakpoint-large: 1400px;
 }
 
 .industrial-navbar {
-  font-family: $font-family-base;
-  
-  * {
-    font-family: inherit;
-  }
   background-color: linear-gradient(to bottom, #333333, rgba(51, 51, 51, .4) 98%), linear-gradient(to bottom, #202020, #202020);
   font-size: 14px;
   position: static;
@@ -439,10 +434,12 @@ $breakpoint-large: 1400px;
 
           h3 {
             margin: 0;
-            font-size: 15px;
-            font-weight: bold;
+            font-size: 16px;
             position: relative;
             left: 20px;
+            font-weight: 600;
+            width: 240px;
+            line-height: 20px;
 
             &::after {
               content: "";
@@ -472,7 +469,7 @@ $breakpoint-large: 1400px;
 
           li {
             padding: 5px 5px 0 20px;
-            font-size: 14px;
+            font-size: 15px;
             cursor: pointer;
 
             &:hover,
@@ -511,8 +508,9 @@ $breakpoint-large: 1400px;
           h3 {
             margin: 0;
             font-size: 1.5rem;
-            font-weight: bold;
+            font-weight: 700;
             position: relative;
+            line-height: 28px;
 
             &::after {
               // Eklendi
